# dina

./: .gitignore  Dockerfile  README.md  docker-compose-es.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
app/: container.py
app/agent/: agent.py  chat.py  ssh_client.py
app/api/: main.py
app/chat/: chat.py  models.py  service.py
app/chat_forms/: form_service.py  user_files_service.py
app/code_process/: code_process_flow.py
app/databases/: mongo_db.py  qdrant_db.py  singletons.py
app/dina/: action_picker.py  agent.py  area_picker.py  dina_chat.py  extra_info.py  handle_agent_response.py  handle_response.py  info_retriever.py  service_form.py  tools.py
app/docs_process/: group_process.py  simple_process.py
app/elastic/: code.py
app/llms/: llm_factory.py  models.py  utils.py
app/mail/: service.py  success_template.py
app/models/: code.py  docs.py  flag.py  process_tracker.py  registry.py
app/pdf_handler/: file_system_service.py  form_service.py  user_files_service.py
app/pipelines/: chat_title_pipeline.py  chunk_context_pipeline.py  generate_retrieval_docs_pipeline.py  pipeline.py
app/pydantic_ai_agent/: pydantic_agent.py
app/task_manager/: agent.py  db_dump.py
app/telegram/: get_chat_id.py  telegram_bot.py
app/test/: chat_editor_output.py  check_quality.py  code_editor.py  create_question.py  create_question_flow.py  embedd_no_context.py  gemini_chat.py  personal_id.py  test_auth.py  test_retrieval.py
app/utils/: anthropic_models.py  anthropic_test.py  antrhpic_stream.py  bg_creator.py  create_user.py  (+18 more)
(+117 files in other folders)
